[package]
name = "graph_program"
version = "0.3.0"
description = "Holaplex Directed Graph Program."
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "graph_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.25.0", features = ["init-if-needed"] }
